# sqliteDBManager

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: INDUSTRY_PRACTICES.md  Security.md
examples/: main.cpp
include/sqlite3db/: connection.hpp  exceptions.hpp  migration.hpp  repository.hpp  sqlite3db.hpp  statement.hpp  transaction.hpp
src/: connection.cpp  migration.cpp  repository.cpp  statement.cpp  transaction.cpp
tests/: test_main.cpp
